--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gl-matrix": "2.3.2",
     "handlebars": "^4.0.5",
     "json-stringify-safe": "^5.0.1",
+    "metaviewport-parser": "^0.0.1",
     "mkdirp": "^0.5.1",
     "opn": "^4.0.2",
     "rimraf": "^2.2.8",
